# streamlit-julia-call

./: LICENSE.txt  Makefile  README.md  pyproject.toml
examples/: main.py
examples/pages/: mandel.py
streamlit_julia_call/: __init__.py  helper.jl
tests-playwright/: Makefile  conftest.py  multisession.py  multisession_test.py
